--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "webapp",
+  "name": "moviemysteries",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "@auth/prisma-adapter": "^2.10.0",
+    "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.15.0",
+    "next": "14.2.6",
+    "next-auth": "^4.24.11",
+    "openai": "^5.19.1",
+    "prisma": "^6.15.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.6",
     "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
